style.css
* {
    /* border: 1px solid rgb(188, 185, 26); */
    box-sizing: border-box;
    font-family: Roboto, sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue';
    text-decoration: none;
    user-select: none;
}

body {
    margin: 0;
    padding: 0;
    background-color: rgb(0, 0, 0);
    background-image: url(./img/brick-wall.png);
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    color: white;
}

.name-dialog {
    &::backdrop {
        background-color: rgb(0, 0, 0, 0.5);
        backdrop-filter: blur(5px);
    }
    border-radius: 5px;
    background-color: rgb(19, 18, 18);
    color: white;
    button {
        all: unset;
        cursor: pointer;
        padding: 10px;
        margin-top: clamp(1rem, 4dvh, 4rem);
        border: 2px solid pink;
        box-shadow: 0px 0px 30px 3px blue,
                    0px 0px 10px 3px pink;
        border-radius: 6px;
        &:hover {
            transform: scale(1.2);
        }
    }
}

.main-container {
    display: flex;
    flex-direction: column;
    height: 100dvh;
    max-height: 100dvh;
    margin-left: auto;
    margin-right: auto;
    cursor: default;
    text-align: center;
    font-size: calc(1vw + 0.5rem);
    text-shadow: 0px 0px 10px pink;
    overflow: hidden;
}

.header {
    font-size: clamp(0.8rem, 3vw + 0.5rem, 3rem);
    margin: clamp(0.2rem, 1.5dvh, 2rem);
    align-self: center;
}

.top-info-container {
    display: flex;
    flex-wrap: wrap;
    align-self: center;
    width: 50%;
    min-width: 0;
    margin-bottom: clamp(0.1rem, 1dvh, 1rem);
    .player-1-score, .player-2-score, .player-draws {
        flex: 0 0 33.3%;
        white-space: nowrap;
        overflow: hidden;
        padding-top: clamp(3px, 1.5dvh, 20px);
        padding-bottom: clamp(3px, 1.5dvh, 20px);
    }
    .player-1-container, .player-2-container, .empty-container {
        flex: 0 0 33.3%;
        position: relative;
        white-space: nowrap;
        overflow: hidden;
        padding-top: clamp(3px, 1.5dvh, 20px);
        padding-bottom: clamp(3px, 1.5dvh, 20px);
    }
    .svg-border {
        position: absolute;
        top: 0px;
        left: 0px;
        width: 100%;
        height: 100%;
        overflow: visible;
        stroke-dasharray: 720, 720;
        animation: spin 800ms alternate infinite paused;
        filter: drop-shadow(1px 1px 3px pink);
    }
}

@keyframes spin {
    from {
        stroke-dashoffset: 0;
    }
    to {
        stroke-dashoffset: 720;
    }
}

.score-animation {
    color: yellow;
    animation: fade-out 2.0s linear;
    font-size: clamp(0.8rem, 3vw + 0.5rem, 3rem);
    position: absolute;
    text-shadow: 0px 0px 5px yellow;
    padding-left: 5px;
}

@keyframes fade-out {
    0% {
        transform: scale(1.5) translateY(0px);
        opacity: 1.0;
    }
    50% {
        transform: scale(1.25) translateY(-10px);
        opacity: 0.5;
    }
    100% {
        transform: scale(1.0) translateY(-20px);
        opacity: 0.0;
    }
}

.center-container {
    display: flex;
    justify-content: center;
    align-items: center;    flex: 1 1 auto;
    min-height: 0;
    .game-container {
        position: relative;
        display: flex;
        flex-wrap: wrap;
        max-height: 100%;
        max-width: 100%;
        width: min(50vw, 50vh);
        aspect-ratio: 1 / 1;
        border: 2px solid pink;
        border-radius: 6px;
        box-shadow: 0px 0px 15px 2px blue,
                    0px 0px 500px 1px blue,
                    inset 0px 0px 40px -5px blue,
                    0px 0px 5px 5px pink,
                    0px 0px 1000px 0px pink,
                    inset 0px 0px 100px 0px pink;
    }
}
.marker0 {
    filter: drop-shadow(0px 0px 5px grey)
            drop-shadow(0px 0px 22px grey)
            drop-shadow(0px 0px 2px grey);
    stroke: grey;
    stroke-width: 2px;
}

.markerX {
    filter: drop-shadow(0px 0px 5px rgb(255, 0, 0))
            drop-shadow(0px 0px 22px red)
            drop-shadow(0px 0px 2px red);
    stroke: red;
    stroke-width: 2px;
    
}
.markerO {
    filter: drop-shadow(0px 0px 5px cyan)
            drop-shadow(0px 0px 22px rgb(0, 255, 234))
            drop-shadow(0px 0px 2px cyan);
    stroke: cyan;
    stroke-width: 2px;
}

.bottom-info-container {
    display: flex;
    justify-content: center;
    margin-top: clamp(1rem, 4dvh, 4rem);
    margin-bottom: clamp(1rem, 5dvh, 4rem);
    .reset-button {
        all: unset;
        cursor: pointer;
        padding: 10px;
        border: 2px solid pink;
        box-shadow: 0px 0px 30px 3px blue,
                    0px 0px 10px 3px pink;
        border-radius: 6px;
        &:hover {
            transform: scale(1.2);
        }
    }
}

.cell {
    position: relative;
    flex: 1 1 33.3%;
    background-color: transparent;
    border: 2px solid pink;
    border-radius: 6px;
    box-shadow: 0px 0px 5px 5px pink;
    cursor: pointer;
    overflow: hidden;
}

.footer {
    display: flex;
    justify-content: center;
    align-items: center;
    align-self: center;
    margin-top: auto;
    background-color: transparent;
    font-size: clamp(0.3rem, 0.5vw + 0.3rem, 1rem);
    .logo {
        height: clamp(15px, 3dvh, 40px);
    } 
}

@media (max-height: 400px) {
    .top-info-container {
        display: none;
    }
    .bottom-info-container .reset-button {
        padding: 4px;
    }
}

